infra/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tmsa
  labels:
    name: tmsa
    environment: production
